crates/eth-valkyoth-derive/tests/ui/rlp_skip_without_reason.stderr
error: eth_rlp skip requires default and reason = "..."
 --> tests/ui/rlp_skip_without_reason.rs:5:5
  |
5 | /     #[eth_rlp(skip)]
6 | |     value: u64,
  | |______________^
